@@ -1,6 +1,14 @@
 This file contains ALL changes in dependencies in both REQUIRED / OPTIONAL dependencies for all phases (configure/build/runtime/test/develop)
 
 0.003003
+ [Added / runtime requires]
+ - Carp
+
+ [Changed / develop suggests]
+ - Dist::Zilla::PluginBundle::Author::KENTNL 2.020000 → 2.020001
+
+ [Removed / runtime requires]
+ - overload
 
 0.003002 2014-09-04T19:09:39Z
  [Changed / test recommends]
