@@ -1,6 +1,13 @@
 Release history for Dist-Zilla-Plugin-Author-KENTNL-RecommendFixes
 
 {{$NEXT}}
+ [Dependencies::Stats]
+ - Dependencies changed since 0.003002, see misc/*.deps* for details
+ - develop: (suggests: ↑1)
+ - runtime: +1 -1
+
+ [Internals]
+ - Factor _Path parts into _Assertion and have generic class prototype.
 
 0.003002 2014-09-04T19:09:39Z
  [00 Trivial]
